# chicoDeJuego

./: .gitignore  CMakeLists.txt  README.md  chicoDeJuego.c  chicoDeJuego.cpp  mem.hexd
archive/src/: cart.c  cart.h  cpu.c  instr.h  mem.c  utils.c  utils.h
libs/: sha256.c  sha256.h
src/: apu.cpp  apu.h  apu_channels.cpp  apu_channels.h  cart.c  cart.cpp  cart.h  controller.cpp  controller.h  cpu.c  cpu.cpp  cpu.h  debugger.cpp  debugger.h  dma.cpp  dma.h  emu.c  emu.cpp  emu.h  hw_reg_def.h  instr.c  mem.c  mem.h  memory.cpp  memory.h  ppu.c  ppu.cpp  ppu.h  ppu_old.h  ppu_renderer.cpp  ppu_renderer_old.cpp  prefs.h  savestates.cpp  savestates.h  screen_specs.h  sync.cpp  sync.h  timer.cpp  timer.h  ui.cpp  (+5 more)
